# wctr-demo-engine

./: Cargo.toml  in.wl
res/SDL2_gfx-1.0.4/: SDL2_gfx.sln  SDL2_gfx.vcxproj
res/SDL2_gfx-1.0.4/Win32/Debug/: SDL2_gfx.exp  SDL2_gfx.ilk  vc142.idb
res/SDL2_gfx-1.0.4/Win32/Debug/SDL2_gfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL2_gfx.lastbuildstate  SDL2_gfx.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/SDL2_gfx-1.0.4/test/: TestFramerate.vcxproj  TestGfx.vcxproj  TestImageFilter.vcxproj  TestRotozoom.vcxproj
res/SDL2_gfx-1.0.4/x64/Debug/: SDL2_gfx.exp  SDL2_gfx.ilk
res/SDL2_gfx-1.0.4/x64/Debug/SDL2_gfx.tlog/: CL.command.1.tlog  CL.write.1.tlog  SDL2_gfx.lastbuildstate  SDL2_gfx.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/SDL2_gfx-1.0.4/x64/Release/: SDL2_gfx.exp  SDL2_gfx.iobj  SDL2_gfx.ipdb
res/SDL2_gfx-1.0.4/x64/Release/SDL2_gfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL2_gfx.lastbuildstate  SDL2_gfx.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: clcontext.rs  defs.rs  fm_page.rs  main.rs  path_sheet.rs  signals.rs  text_line.rs  tracker.rs  turtle.rs
