[package]
name = "wcdemengine"
version = "0.1.0"
authors = ["Weird Constructor <weirdconstructor@gmail.com>"]
edition = "2018"

[dependencies]
palette = "0.2"
chrono = "0.4.6"
wlambda= { path = "../wlambda" }

[dependencies.sdl2]
version="0.32"
default-features=false
features=["ttf","bundled","gfx"]
#,"image","gfx","ttf"]
#,"mixer"]
